@@ -47,8 +47,8 @@ Feature: Basic smell detection
       Inline::C#parse_signature has boolean parameter raw (Control Couple)
       Inline::C#parse_signature has the variable name 'x' (Uncommunicative Name)
       Inline::C#parse_signature is controlled by argument raw (Control Couple)
-      Inline::C#strip_comments doesn't depend on instance state (Utility Function)
-      Inline::C#strip_comments refers to src more than self (Feature Envy)
+      Inline::C#strip_comments doesn't depend on instance state (Low Cohesion)
+      Inline::C#strip_comments refers to src more than self (Low Cohesion)
       Module#inline calls Inline.const_get(lang) twice (Duplication)
       Module#inline has approx 11 statements (Long Method)
       Module#inline is controlled by argument options (Control Couple)
@@ -100,9 +100,9 @@ Feature: Basic smell detection
       OptionParser#make_switch has the variable name 's' (Uncommunicative Name)
       OptionParser#make_switch has the variable name 'v' (Uncommunicative Name)
       OptionParser#order calls argv[0] twice (Duplication)
-      OptionParser#order refers to argv more than self (Feature Envy)
+      OptionParser#order refers to argv more than self (Low Cohesion)
       OptionParser#parse calls argv[0] twice (Duplication)
-      OptionParser#parse refers to argv more than self (Feature Envy)
+      OptionParser#parse refers to argv more than self (Low Cohesion)
       OptionParser#parse_in_order calls $!.set_option(arg, true) twice (Duplication)
       OptionParser#parse_in_order calls cb.call(val) twice (Duplication)
       OptionParser#parse_in_order calls raise($!.set_option(arg, true)) twice (Duplication)
@@ -115,7 +115,7 @@ Feature: Basic smell detection
       OptionParser#parse_in_order has approx 28 statements (Long Method)
       OptionParser#parse_in_order is controlled by argument setter (Control Couple)
       OptionParser#permute calls argv[0] twice (Duplication)
-      OptionParser#permute refers to argv more than self (Feature Envy)
+      OptionParser#permute refers to argv more than self (Low Cohesion)
       OptionParser#search has the variable name 'k' (Uncommunicative Name)
       OptionParser#summarize has 4 parameters (Long Parameter List)
       OptionParser#summarize has the variable name 'l' (Uncommunicative Name)
@@ -127,15 +127,15 @@ Feature: Basic smell detection
       OptionParser::Completion#complete has boolean parameter icase (Control Couple)
       OptionParser::Completion#complete has the variable name 'k' (Uncommunicative Name)
       OptionParser::Completion#complete has the variable name 'v' (Uncommunicative Name)
-      OptionParser::Completion#complete refers to candidates more than self (Feature Envy)
+      OptionParser::Completion#complete refers to candidates more than self (Low Cohesion)
       OptionParser::List#accept has the parameter name 't' (Uncommunicative Name)
       OptionParser::List#accept is controlled by argument pat (Control Couple)
-      OptionParser::List#accept refers to pat more than self (Feature Envy)
-      OptionParser::List#add_banner refers to opt more than self (Feature Envy)
+      OptionParser::List#accept refers to pat more than self (Low Cohesion)
+      OptionParser::List#add_banner refers to opt more than self (Low Cohesion)
       OptionParser::List#complete has 4 parameters (Long Parameter List)
       OptionParser::List#complete has boolean parameter icase (Control Couple)
       OptionParser::List#reject has the parameter name 't' (Uncommunicative Name)
-      OptionParser::List#summarize refers to opt more than self (Feature Envy)
+      OptionParser::List#summarize refers to opt more than self (Low Cohesion)
       OptionParser::List#update has 5 parameters (Long Parameter List)
       OptionParser::List#update has approx 6 statements (Long Method)
       OptionParser::List#update has the variable name 'o' (Uncommunicative Name)
@@ -187,10 +187,10 @@ Feature: Basic smell detection
       RedCloth tests codepre.zero? at least 3 times (Simulated Polymorphism)
       RedCloth tests href at least 3 times (Simulated Polymorphism)
       RedCloth tests title at least 4 times (Simulated Polymorphism)
-      RedCloth#block_markdown_atx refers to text more than self (Feature Envy)
+      RedCloth#block_markdown_atx refers to text more than self (Low Cohesion)
       RedCloth#block_markdown_bq has approx 6 statements (Long Method)
-      RedCloth#block_markdown_rule refers to text more than self (Feature Envy)
-      RedCloth#block_markdown_setext refers to text more than self (Feature Envy)
+      RedCloth#block_markdown_rule refers to text more than self (Low Cohesion)
+      RedCloth#block_markdown_setext refers to text more than self (Low Cohesion)
       RedCloth#block_textile_lists calls (line_id - 1) twice (Duplication)
       RedCloth#block_textile_lists calls depth.last 5 times (Duplication)
       RedCloth#block_textile_lists calls depth.last.length twice (Duplication)
@@ -201,7 +201,7 @@ Feature: Basic smell detection
       RedCloth#block_textile_lists has approx 20 statements (Long Method)
       RedCloth#block_textile_lists has the variable name 'i' (Uncommunicative Name)
       RedCloth#block_textile_lists has the variable name 'v' (Uncommunicative Name)
-      RedCloth#block_textile_lists refers to depth more than self (Feature Envy)
+      RedCloth#block_textile_lists refers to depth more than self (Low Cohesion)
       RedCloth#block_textile_table contains iterators nested 2 deep (Nested Iterators)
       RedCloth#block_textile_table contains iterators nested 3 deep (Nested Iterators)
       RedCloth#block_textile_table has approx 18 statements (Long Method)
@@ -213,22 +213,22 @@ Feature: Basic smell detection
       RedCloth#check_refs is controlled by argument text (Control Couple)
       RedCloth#clean_html calls tags[tag] twice (Duplication)
       RedCloth#clean_html contains iterators nested 3 deep (Nested Iterators)
-      RedCloth#clean_html doesn't depend on instance state (Utility Function)
+      RedCloth#clean_html doesn't depend on instance state (Low Cohesion)
       RedCloth#clean_html has approx 14 statements (Long Method)
       RedCloth#clean_html has the variable name 'q' (Uncommunicative Name)
       RedCloth#clean_html has the variable name 'q2' (Uncommunicative Name)
-      RedCloth#clean_html refers to raw more than self (Feature Envy)
-      RedCloth#clean_html refers to tags more than self (Feature Envy)
+      RedCloth#clean_html refers to raw more than self (Low Cohesion)
+      RedCloth#clean_html refers to tags more than self (Low Cohesion)
       RedCloth#clean_white_space has approx 7 statements (Long Method)
-      RedCloth#clean_white_space refers to text more than self (Feature Envy)
-      RedCloth#flush_left doesn't depend on instance state (Utility Function)
-      RedCloth#flush_left refers to indt more than self (Feature Envy)
-      RedCloth#flush_left refers to text more than self (Feature Envy)
-      RedCloth#footnote_ref refers to text more than self (Feature Envy)
+      RedCloth#clean_white_space refers to text more than self (Low Cohesion)
+      RedCloth#flush_left doesn't depend on instance state (Low Cohesion)
+      RedCloth#flush_left refers to indt more than self (Low Cohesion)
+      RedCloth#flush_left refers to text more than self (Low Cohesion)
+      RedCloth#footnote_ref refers to text more than self (Low Cohesion)
       RedCloth#glyphs_textile has approx 10 statements (Long Method)
-      RedCloth#htmlesc doesn't depend on instance state (Utility Function)
-      RedCloth#htmlesc refers to str more than self (Feature Envy)
-      RedCloth#incoming_entities refers to text more than self (Feature Envy)
+      RedCloth#htmlesc doesn't depend on instance state (Low Cohesion)
+      RedCloth#htmlesc refers to str more than self (Low Cohesion)
+      RedCloth#incoming_entities refers to text more than self (Low Cohesion)
       RedCloth#initialize has the variable name 'r' (Uncommunicative Name)
       RedCloth#inline contains iterators nested 2 deep (Nested Iterators)
       RedCloth#inline_markdown_link has approx 6 statements (Long Method)
@@ -245,13 +245,13 @@ Feature: Basic smell detection
       RedCloth#inline_textile_span contains iterators nested 2 deep (Nested Iterators)
       RedCloth#inline_textile_span has approx 8 statements (Long Method)
       RedCloth#inline_textile_span has the variable name 'm' (Uncommunicative Name)
-      RedCloth#no_textile doesn't depend on instance state (Utility Function)
-      RedCloth#no_textile refers to text more than self (Feature Envy)
+      RedCloth#no_textile doesn't depend on instance state (Low Cohesion)
+      RedCloth#no_textile refers to text more than self (Low Cohesion)
       RedCloth#pba calls $1.length twice (Duplication)
       RedCloth#pba has approx 21 statements (Long Method)
       RedCloth#pba is controlled by argument text_in (Control Couple)
-      RedCloth#pba refers to style more than self (Feature Envy)
-      RedCloth#pba refers to text more than self (Feature Envy)
+      RedCloth#pba refers to style more than self (Low Cohesion)
+      RedCloth#pba refers to text more than self (Low Cohesion)
       RedCloth#refs_markdown has the variable name 'm' (Uncommunicative Name)
       RedCloth#refs_textile has the variable name 'm' (Uncommunicative Name)
       RedCloth#retrieve has the variable name 'i' (Uncommunicative Name)
