@@ -107,7 +107,6 @@ EOS
       @yaml.should match(/source:\s*#{@source_name}/)
     end
     it 'reports the class' do
-      pending
       @yaml.should match(/\sclass:\s*LowCohesion/)
     end
     it 'reports the subclass' do
